# fitness-coach-agent

./: .env.bootstrap.example  .env.example  .gitignore  .jscpd.json  .mcp.json  .pre-commit-config.yaml  .vercelignore  AGENTS.md  BOOTSTRAP.md  COMPACTION_DESIGN.md  LEAN-CTX.md  README.md  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  knip.json  lefthook.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pyrightconfig.json  requirements.txt  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.oai.config.ts
.claude/: settings.json
.dev/garage/: garage.toml
.github/workflows/: ci.yml
.serena/: project.yml
api/: [...route].py  __init__.py  index.py
app/: global-error.tsx  globals.css  layout.tsx  not-found.module.css  not-found.module.css.d.ts  not-found.tsx  page.tsx
app/calendar/: page.tsx
app/consent/: page.tsx
app/favicon.ico/: route.ts
app/login/: page.tsx
app/privacy/: page.tsx  privacy.module.css  privacy.module.css.d.ts
app/profile/: page.tsx  profile.module.css  profile.module.css.d.ts
backend/: __init__.py  config.py  logging_config.py
backend/engine/: activity_text.py  course_analyzer.py  gpx_parser.py  hrv.py  periodization.py  screenshot_analyzer.py  thresholds.py  training_load.py  tss.py  zones.py
backend/models/: __init__.py  athlete.py  auth.py  chat.py  intervals.py  planning.py  screenshot.py  storage.py  strava.py  training.py
backend/repos/: __init__.py  intervals_repo.py  oauth_repo.py  strava_repo.py  supabase_repo.py
backend/services/: activity_parse.py  activity_text.py  auth.py  chat.py  compliance.py  goal_service.py  intervals.py  nutrition_focus.py  plan_composer.py  planner.py  r2.py  recalibration.py  screenshot.py  strava.py
components/: app-shell.tsx  brand-mark-gallery.tsx  brand-mark.tsx  calendar-legend.tsx  chat-turn-lease-provider.tsx  coach-calendar.module.css  coach-calendar.module.css.d.ts  coach-calendar.tsx  coach-chat.module.css  coach-chat.module.css.d.ts  coach-chat.tsx  coaching-dashboard.tsx  query-provider.tsx  session-loading.module.css  session-loading.module.css.d.ts  session-loading.tsx  status-card.module.css  status-card.module.css.d.ts  status-card.tsx  theme-switcher.tsx
components/profile/: provider-connection-section.tsx
docs/: COMPACTION_DESIGN.md  bootstrap-prod-plan.md  github-issues-progress.md  strava-integration-runbook.md  supabase-migration-history.md  supabase-otp-parity.md
docs/github-issues/: 01-supabase-persistence.md  02-oauth-durable-consent.md  03-adaptive-planner.md  (+14 more)
lib/: auth.ts  calendar-view.ts  calendar-workout-visuals.ts  coach-api.ts  errors.ts  oauth-metadata.ts  schemas.ts  site.ts  supabase-admin.ts  supabase-server.ts  supabase.ts  theme-initializer.ts  types.ts  use-athlete-profile.ts  use-browser-session.ts  use-chat-thread.ts  use-is-mobile.ts  use-theme.ts
scripts/: apply_supabase_migration.sh  colima-docker-host.sh  create_github_issues.sh  db-reset.sh  db-start.sh  db-stop.sh  dev-local.sh  shrink-gpx.ts  verify-preview-supabase-env.ts
supabase/: config.toml  preview_rollback_20260426192302.sql
(+171 files in other folders)
