[project]
name = "exercise-training-plan-gpt"
version = "0.1.0"
description = "ChatGPT-first endurance coaching app with Python planning services."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.37.18,<2.0.0",
  "fastapi>=0.115.12,<0.116.0",
  "fitparse>=1.2.0",
  "gpxpy>=1.6.2",
  "httpx>=0.28.1,<0.29.0",
  "openai>=1.99.0,<2.0.0",
  "pydantic>=2.10.6,<3.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "pyjwt>=2.10.1,<3.0.0",
  "python-multipart>=0.0.20,<0.0.21",
  "sentry-sdk>=2.63.0",
  "supabase>=2.13.0,<2.26.0",
  "uvicorn>=0.34.0,<0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<0.26.0",
  "ruff>=0.11.0,<0.12.0",
  "ty>=0.0.1a4",
  "vulture>=2.14,<3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "C90",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PL",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "TRY",
  "UP",
  "W"
]
ignore = [
  "TRY003"
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["B008"]
"api/[...route].py" = ["F401", "N999"]
"tests/python/**/*.py" = [
  "PLR2004",
  "PLR0913",
  "S101"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["api", "backend", "scripts", "tests/python"]

[tool.vulture]
paths = ["api", "backend", "scripts", "tests/python"]
min_confidence = 80
ignore_names = ["cls"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
asyncio_mode = "auto"
# Live OpenAI and DB integration tests are opt-in, excluded from the default run.
addopts = "-m 'not db and not oai'"
markers = [
  "db: integration tests that require a live Supabase connection (run with: uv run pytest -m db)",
  "oai: live OpenAI API calls; excluded by default, run with `uv run pytest -m oai`",
]
